src/tests/cases/snapshots/excise__tests__cases__ui__enter_largest_folder_with_no_selected_tile.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total: 16.0K (4 files), freed: 0 | /tmp/excise_tests/enter_largest_folder_with_no_selected_tile                                                                                              
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────┐
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                        subfolder1/ (+1 descendants)                                                         │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                 8.0K (50%)                                                                  │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                    file3                     │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                  4.0K (25%)                  │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                    file2                                                                    │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                 4.0K (25%)                                                                  │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────┘
                                                                                                                                                                                              
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit                                                         

