src/tests/cases/snapshots/excise__tests__cases__ui__esc_to_go_up-2.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[1]"
---
 Total: 12.0K (4 files), freed: 0 | /tmp/excise_tests/esc_to_go_up                                                                                                                            
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────────────────┐
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│████████████████████████████████████████████████████████████file2████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████4.0K (33%)██████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                 subfolder1/ (+1 descendants)                 │
├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                                              │
│                                                                                                                             │                          4.0K (33%)                          │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                            file3                                                            │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                         4.0K (33%)                                                          │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────────────────┘
 SELECTED: file2 (4.0K)                                                                                                                                                                       
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit
